--- a/src/app.css
+++ b/src/app.css
@@ -4,9 +4,14 @@
 	--text-color: #124458;
 	--primary-color: #2c708b;
 	--highlight-color: rgb(87, 150, 174);
+	--shade-color: var(--color-gray-200);
+	--light-color: var(--color-gray-200);
+	--lighter-color: var(--color-gray-100);
+	--max-content-width: 880px;
 }
 
 html,
 body {
 	color: var(--text-color);
+	background: var(--lighter-color);
 }
