--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
 
 * {
 	--text-color: #124458;
+	--text-light-color: var(--color-gray-100);
 	--primary-color: #2c708b;
 	--highlight-color: rgb(87, 150, 174);
 	--shade-color: var(--color-gray-200);
