--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,16 @@
 @import 'tailwindcss';
 
+@theme {
+	--breakpoint-2xs: 20rem;
+	--breakpoint-xs: 30rem;
+	--breakpoint-sm: 40rem;
+	--breakpoint-md: 50rem;
+	--breakpoint-lg: 60rem;
+	--breakpoint-xl: 70rem;
+	--breakpoint-2xl: 80rem;
+	--breakpoint-3xl: 90rem;
+}
+
 * {
 	--text-color: #124458;
 	--text-light-color: var(--color-gray-100);
