--wip-- [skip ci]

--- a/src/app.css
+++ b/src/app.css
@@ -45,7 +45,7 @@
 	--shade-color: #082d3d;
 	--light-color: #334155;
 	--lighter-color: #0f172a;
-	--light-bg-color: #144557;
+	--light-bg-color: #06212b;
 	--lighter-bg-color: #0d394a;
 	--bright-color: #4392b2;
 	--bright-highlight-color: rgb(96, 174, 206);
