--wip-- [skip ci]

--- a/src/app.css
+++ b/src/app.css
@@ -49,8 +49,8 @@
 	--lighter-bg-color: #0d394a;
 	--bright-color: #4392b2;
 	--bright-highlight-color: rgb(96, 174, 206);
-	--dark-bg-color: #184354;
-	--footer-bg-color: #082d3d;
+	--dark-bg-color: #031a23;
+	--footer-bg-color: #082a39;
 	--white-transparent-1: rgba(255, 255, 255, 0.1);
 	--white-transparent-2: rgba(255, 255, 255, 0.2);
 }
