--wip-- [skip ci]

--- a/src/app.css
+++ b/src/app.css
@@ -47,7 +47,7 @@
 	--lighter-color: #0f172a;
 	--light-bg-color: #06212b;
 	--lighter-bg-color: #0d394a;
-	--bright-color: #4392b2;
+	--bright-color: #247ea2;
 	--bright-highlight-color: rgb(96, 174, 206);
 	--dark-bg-color: #031a23;
 	--footer-bg-color: #082a39;
