--- a/src/app.css
+++ b/src/app.css
@@ -50,7 +50,7 @@
 	--bright-color: #247ea2;
 	--bright-highlight-color: rgb(96, 174, 206);
 	--dark-bg-color: #031a23;
-	--footer-bg-color: #082a39;
+	--footer-bg-color: #010c11;
 	--white-transparent-1: rgba(255, 255, 255, 0.1);
 	--white-transparent-2: rgba(255, 255, 255, 0.2);
 }
