--- a/src/app.css
+++ b/src/app.css
@@ -40,6 +40,46 @@
 	src: url('/fonts/NotoSans-Bold.woff2') format('woff2');
 }
 
+@font-face {
+	font-family: 'Noto Sans Mono';
+	font-style: normal;
+	font-weight: 300;
+	font-display: swap;
+	src: url('/fonts/NotoSansMono-Light.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Noto Sans Mono';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url('/fonts/NotoSansMono-Regular.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Noto Sans Mono';
+	font-style: normal;
+	font-weight: 500;
+	font-display: swap;
+	src: url('/fonts/NotoSansMono-Medium.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Noto Sans Mono';
+	font-style: normal;
+	font-weight: 600;
+	font-display: swap;
+	src: url('/fonts/NotoSansMono-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Noto Sans Mono';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url('/fonts/NotoSansMono-Bold.woff2') format('woff2');
+}
+
 .hoverStyles {
 	display: none;
   @apply scale-105 -translate-15 brightness-125;
@@ -70,6 +110,8 @@
 	--color-midnight: var(--footer-bg-color);
 	--color-glass-light: var(--white-transparent-1);
 	--color-glass: var(--white-transparent-2);
+	
+	--font-mono: 'Noto Sans Mono', monospace;
 }
 
 * {
